# nereohub

./: .gitignore  .gitmodules  LICENSE  README.md  diff_api.txt  nereohub.spec  pyproject.toml  requirements.txt  server-launcher.xml  task_config.yaml
.agent/: instructions.md
.agent/skills/bdd-generator/: SKILL.md
.agent/skills/bug-fix-reviewer/: SKILL.md
.agent/skills/code-reviewer/: SKILL.md
.agent/skills/commit-generator/: SKILL.md
.agent/skills/dev-flow/: SKILL.md
.agent/skills/doc-generator/: SKILL.md
.agent/workflows/: add-backlog-task.md  add-bug.md  add-plan-task.md  code-review.md  commit.md  dev-task.md  dev.md  doc.md  finish-bug.md  fix.md  generate-bdd.md  review-fix.md  test-review.md  tests.md
docs/: requirements.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
nereohub/: __init__.py  __main__.py  api.py  config.py  discovery.py  parsing.py  pdf_generator.py
nereohub/static/: app.js  index.html  styles.css
plan/tasks/: T-NHB-0001-lectura-task-config-proyectos.md  T-NHB-0002-soporte-configuracion-v3.md  T-NHB-0003-gestion-estado-tareas-desde-tarjetas.md  T-NHB-0004-integracion-skills-comunes-via-submodulo.md  T-NHB-0005-migracion-submodulo-skills-nereoskills.md  T-NHB-0006-pipeline-release-wheel-exe.md
scripts/: nereohub.ps1  nereohub.sh  run_tests.py
tests/: conftest.py
tests/unit/: test_api.py  test_config.py  test_config_project.py  test_discovery.py  test_parsing.py  test_pdf_generator.py
tmp/: old_app.js  old_index.html  old_styles.css
(+82 files in other folders)
